# GCN_forecast_urban_services_loads

./: gnn_test5.ipynb  pyproject.toml  Обеспеченность сервисами _ Детский сад,Жилые дома.geojson  Обеспеченность сервисами _ Детский сад,Сервисы.geojson
